level5/resources/istio/monitoring-gateway.yaml
# monitoring-gateway.yaml
apiVersion: networking.istio.io/v1beta1
kind: Gateway
metadata:
  name: monitoring-gateway
  namespace: istio-system
spec:
  selector:
    istio: ingressgateway  # use default istio-ingressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - grafana.local
        - prometheus.local
        - kiali.local
        - jaeger.local
